# aggregator

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 001_initial.py  3cdb298b2d13_add_index_on_product_external_id.py
app/: config.py  logging.py  main.py  schemas.py
app/db/: database.py  models.py
app/routers/: offers.py  products.py
app/services/: offers_client.py  sync_service.py
app/tasks/: scheduler.py
tests/: conftest.py  test_offers.py  test_products.py  test_sync.py
