[project]
name = "aggregator"
version = "0.1.0"
description = "Product Aggregator Microservice - syncs product offers from external service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.28.0",
    "apscheduler>=3.10.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.34.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "mypy>=1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
    "ruff>=0.13.0",
]

[tool.mypy]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",   # pyflakes - catches major errors (unused imports, undefined names, etc.)
    "E",   # pycodestyle errors - major style issues
    "W",   # pycodestyle warnings - whitespace/indent issues
    "C90", # mccabe - complexity checking
    "I",   # isort - import ordering and organization
    "UP",  # pyupgrade - modernize Python code
    "N",   # pep8-naming - enforce naming conventions
    "A",   # flake8-builtins - prevent shadowing built-ins
    "S",   # flake8-bandit - security checks
    "RUF", # ruff-specific rules
]
ignore = [
    "S104",  # hardcoded-bind-all-interfaces (OK for dev servers)
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "S101"]

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
order-by-type = false
